# study_cmake

./: -GenerateBinaries.bat  -GenerateBuildProject.bat  .gitignore  .gitmodules  CMakeLists.txt  README.md  _GenerateBinaries.bat  _GenerateBuildProject.bat  main.cpp
_documentation/: cli_commands.md  log.md  notebook.md  timelog.md
data/: test.stl
headers/: my_functions.h
libs/header_hello_1.0.0/: hello.cpp  hello.hpp
source/: main.cpp  my_functions.cpp
